# j3TreeText

./: README.md
src/: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.txt  about.txt  build.rs  build_release.py
src/docs/: cli-agent-guide.md  domain.md  gui-platform-parity.md  release-notes.md
src/resources/: app.manifest  app.rc
src/src/: app.rs  cli.rs  domain.rs  error.rs  lib.rs  main.rs
src/src/cli/: args.rs  commands.rs  content.rs  output.rs  parser.rs
src/src/domain/: document_tree.rs  open_tabs.rs  tests.rs  text_edit.rs  ui_settings.rs
src/src/infra/: desktop_entry.rs  mod.rs  release_notices.rs  sqlite.rs  text_file.rs  text_tree_export.rs
src/src/infra/sqlite/: node.rs  path.rs  repository.rs  schema.rs  search.rs  settings.rs  tests.rs  tree.rs  tree_repository.rs
src/src/infra/sqlite/tree/: lookup.rs  ordering.rs  restore.rs  subtree.rs  titles.rs
src/src/platform/: mod.rs
src/src/platform/file_system/: generic.rs  mod.rs  unix.rs  windows.rs
src/src/platform/gui/: command_contract.rs  linux.rs  mod.rs  unsupported.rs
src/src/platform/win32/: commands.rs  common.rs  dpi.rs  file_dialog.rs  font.rs  i18n.rs  layout.rs  menu.rs  mod.rs  size_move.rs  state.rs  tabs.rs  text.rs  theme.rs  tree.rs  window.rs
src/src/platform/win32/commands/: dispatch.rs  find_replace.rs  save_tabs.rs  search.rs  settings.rs  text_io.rs  tree_commands.rs
src/tools/: generate_third_party_notices.py  windows_menu_smoke.ps1
