[package]
name = "j3treetext"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "j3TreeText"
path = "src/main.rs"

[[bin]]
name = "j3TreeTextCli"
path = "src/bin/j3TreeTextCli.rs"

[dependencies]
encoding_rs = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.11.3"

[build-dependencies]
embed-resource = "3.0"
